--- a/index.html
+++ b/index.html
@@ -14,35 +14,40 @@
   </style>
   <script src="/socket.io/socket.io.js"></script>
   <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
-  <!--<script>-->
-      <!--$(document).ready(function(){-->
-        <!--var socket = io();-->
-
-        <!--$('form').submit(function() {-->
-            <!--socket.emit('chat message', $('#m').val());-->
-            <!--$('#m').val('');-->
-            <!--console.log("11");-->
-            <!--return false;-->
-        <!--});-->
-      <!--});-->
-  <!--</script>-->
   <script>
       $(document).ready(function(){
-        var socket = io();
+          var socket = io();
 
-        $('form').submit(function(){
-            socket.emit('chat message', $('#m').val());
-            $('#m').val('');
-            return false;
-        });
+          socket.emit('entrance','hello man');
 
-        socket.on('chat message', function(msg){
-            $('#messages').append($('<li>').text(msg));
-        });
+          $('form').submit(function(){
+              socket.emit('chat message', $('#m').val());
+              $('#m').val('');
+              return false;
+          });
+
+          socket.on('entranceAlarm', function(msg){
+              console.log(msg.id);
+              var html = '<li><b>' + msg.id + '  in!! </b></li><br><br>';
+              $('#everybody')[0].innerHTML = html;
+          });
+
+          socket.on('exitAlarm', function(msg){
+              var html = '<li><b>' + msg.id + '  out!! </b></li><br><br>';
+              $('#everybody')[0].innerHTML = html;
+          });
+
+          socket.on('chat message', function(msg){
+              $('#messages').append($('<li>').text(msg));
+          });
       });
   </script>
 </head>
 <body>
+<div align="center">
+  <ul id="everybody"></ul>
+</div>
+
 <ul id="messages"></ul>
 <form action="">
   <input id="m" autocomplete="off" /><button>Send</button>
