add nickName function

--- a/index.html
+++ b/index.html
@@ -5,51 +5,89 @@
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body { font: 13px Helvetica, Arial; }
-    form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
+    #messagesForm { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
+    #nickNameForm { background: #000; padding: 3px; position: fixed; bottom: 50%; width: 100%; }
     form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
     form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
     #messages { list-style-type: none; margin: 0; padding: 0; }
     #messages li { padding: 5px 10px; }
     #messages li:nth-child(odd) { background: #eee; }
+
+    #mask {
+      position:absolute;
+      z-index:9000;
+      background-color:#000;
+      display:none;
+      left:0;
+      top:0;
+    }
   </style>
   <script src="/socket.io/socket.io.js"></script>
   <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
   <script>
+      function wrapWindowByMask(){
+          //화면의 높이와 너비를 구한다.
+          var maskHeight = $(window).height();
+          var maskWidth = $(window).width();
+
+          //마스크의 높이와 너비를 화면 것으로 만들어 전체 화면을 채운다.
+          $('#mask').css({'width':maskWidth,'height':maskHeight});
+
+          //애니메이션 효과 - 일단 1초동안 까맣게 됐다가 80% 불투명도로 간다.
+          $('#mask').fadeIn(1000);
+          $('#mask').fadeTo("slow",0.8);
+      }
+
       $(document).ready(function(){
+          var nickName;
+          wrapWindowByMask();
           var socket = io();
 
-          socket.emit('entrance','hello man');
+          $('#btn').click(function(e){
+              nickName = $('#nickName').val();
+              socket.emit('entrance', {nickName:nickName});
+              e.preventDefault();
+              $('#mask').hide();
+          });
 
-          $('form').submit(function(){
-              socket.emit('chat message', $('#m').val());
+          $('#messagesForm').submit(function(e){
+              var msg = $('#m').val();
+              socket.emit('chat message', {nickName:nickName, msg:msg});
               $('#m').val('');
-              return false;
+              e.preventDefault();
           });
 
           socket.on('entranceAlarm', function(msg){
-              console.log(msg.id);
-              var html = '<li><b>' + msg.id + '  in!! </b></li><br><br>';
+              var html = '<li><b>' + msg.nickName + '  in!! </b></li><br><br>';
               $('#everybody')[0].innerHTML = html;
           });
 
           socket.on('exitAlarm', function(msg){
-              var html = '<li><b>' + msg.id + '  out!! </b></li><br><br>';
+              var html = '<li><b>' + msg.nickName + '  out!! </b></li><br><br>';
               $('#everybody')[0].innerHTML = html;
           });
 
-          socket.on('chat message', function(msg){
-              $('#messages').append($('<li>').text(msg));
+          socket.on('chat message', function(data){
+              var tag = '<li><b>' + data.nickName + '</b> : ' + data.msg + '</li>';
+              $('#messages').append(tag);
           });
       });
   </script>
 </head>
 <body>
+<div id="mask">
+  <form id="nickNameForm" action="">
+    <p><font color="#f0f8ff">Enter you nickname</font></p>
+    <input id="nickName" autocomplete="off" /><button id="btn">Select</button>
+  </form>
+</div>
+<!------------------------------------------------------------------------------------------>
 <div align="center">
   <ul id="everybody"></ul>
 </div>
-
+<!------------------------------------------------------------------------------------------>
 <ul id="messages"></ul>
-<form action="">
+<form id="messagesForm" action="">
   <input id="m" autocomplete="off" /><button>Send</button>
 </form>
 </body>
